🔭 - Fix spacing on list items

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ ul {
 }
 
 li {
-    padding-left: .75rem;
+    padding-left: 1.75rem;
 }
 
 li::marker {
